--- a/_web-src/scss/theme/_top.scss
+++ b/_web-src/scss/theme/_top.scss
@@ -35,7 +35,7 @@
     @extend .theme-font;
     font-size: 2.5rem;
     padding-top: $spacer / 2;
-    color: darken($theme-color-main, 50%);
+    color: lighten($theme-color-main, 80%);
 
     @include media-breakpoint-up(lg) {
       padding-top: $spacer;
