--- a/_web-src/scss/theme/_variables.scss
+++ b/_web-src/scss/theme/_variables.scss
@@ -1,7 +1,7 @@
 // Colors
 
 $body-background: #fff;
-$theme-color-main: #79AFE8;
+$theme-color-main: #263238;
 $theme-color-main-contrast: #fff;
 
 // Radius
